# RustDemo

./: .gitignore
demo01/: Cargo.toml  askama.toml  build.rs  log4rs.yaml
demo01/src/: api.rs  auth.rs  config.rs  logmacro.rs  main.rs  server.rs  ws.rs
demo01/tot_macro/src/: lib.rs
demo02/: Cargo.toml
demo02/src/: defend.rs  main.rs
demo03/: Cargo.toml  build.rs
demo03/libs/: tot_utils.lib
demo03/src/: global_cache.rs  main.rs  test.rs  test2.rs  test_iter.rs  test_thread.rs  test_trait.rs
demo03/tot_macro/src/: lib.rs
demo04/: Cargo.toml
demo04/src/: lib.rs
demo05/: Cargo.toml
demo05/src/: main.rs
demo06/: Cargo.toml
demo06/src/: main.rs  main2.rs  test.html  test_box.rs  test_fs.rs  test_hashmap.rs
demo06/tests/: test.rs
demo07/: Cargo.toml
demo07/src/: entitys.rs  main.rs  mysql_config.rs
demo08/: Cargo.toml  my.db
demo08/src/: entitys.rs  main.rs  sqlite_config.rs  test_sql.rs
demo09/: Cargo.toml
demo09/src/: main.rs
demo10/: Cargo.toml  build.rs
demo10/html/: test.html
demo10/src/: api.rs  config.rs  file_watch.rs  global_cache.rs  htmlparse.rs  main.rs  markdownparse.rs  server.rs  transfer_file.rs
demo11/: Cargo.toml
demo11/src/: main.rs
demo12/: Cargo.toml
demo12/src/: main.rs
demo13/: Cargo.toml
demo13/src/: main.rs
demo14/: Cargo.toml  build.rs
demo14/src/: main.rs
demo16/: Cargo.toml
demo16/src/: main.rs
demo17/: Cargo.toml
demo17/src/: main.rs
demo18/: CMakeLists.txt  main.c
demo18/.zed/: debug.json
demo18/header/: tot_string.h
demo18/src/: tot_string.c
demo19/: CMakeLists.txt  main.cpp
demo19/.zed/: debug.json
demo19/src/: ontop.cpp  test.cpp
demo20/: .clang-format  CMakeLists.txt  main.cpp
demo20/.zed/: debug.json
demo21/: Cargo.toml
demo21/src/: button.rs  main.rs  obstacle.rs  player.rs
demo22/: Cargo.toml
demo22/src/: main.rs
slint-rust-template-main/: Cargo.toml
test/: CMakeLists.txt  mylib.cpp  mylib.h
test/.zed/: debug.json
test_tauri/: index.html  package-lock.json  package.json
test_tauri/src/: App.vue  main.js
test_tauri/src-tauri/: tauri.conf.json
test_tauri/src-tauri/src/: lib.rs
testdll/: CMakeLists.txt
testdll/.zed/: tasks.json
testdll/src/: main.cpp
tot_base/: Cargo.toml
tot_base/src/: lib.rs
tot_macro/: Cargo.toml
tot_macro/src/: lib.rs
