[package]
name = "demo01"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
chrono = "0.4"
rand = "0.8.5"
log = "0.4"
log4rs = "1.4.0"
actix = "0.13"
once_cell = "1.19"
actix-web = "4"
actix-cors = "0.7"
actix-web-actors = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tot_macro = { path = "./tot_macro" }
