[package]
name = "demo10"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
chrono = "0.4"
rand = "0.8.5"
log = "0.4"
log4rs = "1.4.0"
actix = "0.13"
once_cell = "1.19"
actix-web = "4"
actix-cors = "0.7"
actix-web-actors = "4"
futures-util = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tot_macro = {path = "../tot_macro"}
tokio = { version = "1.33", features = ["full"] }
notify = { version = "6.1.1" }
lazy_static = "1.4"
opener = "0.6"
actix-files = "0.6"
[build-dependencies]
winres = "0.1"
